[metadata]
name = easyconf
version = 1.1.dev0
description = Easy file-based and environment configuration.
long_description = file: README.rst, CHANGES.rst
author = Chris Beaven
author_email = smileychris@gmail.com
url = https://github.com/SmileyChris/easyconf/
keywords = configuration
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django-environ
    ruamel.yaml

[options.extras_require]
maintainer =
    zest.releaser[recommended]

[bdist_wheel]
# Works in both Python 2 and Python 3
universal = 1

[flake8]
ignore = E203, W503
max-line-length: 88
